syntax = "proto3";
package pb;

import "google/api/annotations.proto";
import "rpc_create_user.proto";
import "rpc_login.proto";
import "protoc-gen-openapiv2/options/annotations.proto";


option go_package = "gitlab.com/mandoor/api/pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Mandoor";
    version: "1.0";
    contact: {
      name: "Dash Digital";
      url: "https://github.com/dashdigital";
      email: "dashdigital@gmail.com";
    };
  };
};

service Mandoor {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      post: "/v1/create_user"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API to create a new user";
      summary: "Create new user";
    };
  }

  rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {
    option (google.api.http) = {
      post: "/v1/login"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API for login user";
      summary: "Login User";
    };
  }

}