syntax = "proto3";
package pb;

import "validate/validate.proto";
import "users.proto";
option go_package = "gitlab.com/mandoor/api/pb";


message LoginUserRequest {
  string email = 1  [(validate.rules).string = {min_len: 3, max_len: 10}];
  string password = 2;
}

message LoginUserResponse {
  int32 code = 1;
  string msg = 2;
  int64 id = 3;
}
